agrega ruta a vista-detail

--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -12,18 +12,17 @@
 <!--carrousel-->
 <div class="glider-contain">
     <div class="glider">
-      <div><img src="/img/img-home-banner.jpg" alt=""></div>
-   <div><img src="/img/2.jpg" alt=""></div>
+        <button aria-label="Previous" class="glider-prev">«</button>
+        <div><img src="/img/img-home-banner.jpg" alt=""></div>
+        <div><img src="/img/2.jpg" alt=""></div>
       <div><img src="/img/1.jpg" alt=""></div>
       <div><img src="/img/3.jpg" alt=""></div>
       <div><img src="/img/4.jpg" alt=""></div>
       <div><img src="/img/5.jpg" alt=""></div>
-    <button aria-label="Previous" class="glider-prev">«</button>
-    <button aria-label="Next" class="glider-next">»</button>
-    <div role="tablist" class="dots"></div>
-  </div>
+        <button aria-label="Next" class="glider-next">»</button>
+        <div role="tablist" class="dots"></div>
+    </div>
 
-  
   <script src="javascripts/glider.js"> </script>
   <script src="javascripts/home.js"></script>
   
@@ -39,8 +38,7 @@
                   <img src="/img/tazadona.jpg" width="100%" alt="">
                   <div class="detail-product">
                    
-                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
-                      <h4>Taza Dona </h4>
+<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Dona </h4>
                       <div class="contenedor-precio-descuento">
                     
                           <p class="precio">$1.770 </p>
@@ -58,11 +56,10 @@
   
                   <div class="detail-product">
                   
-                          <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
-                      <h4>Taza Llama</h4>
+    <a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Llama</h4>
                       <div class="contenedor-precio-descuento">
                           <p class="precio">$2.000</p>
-                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                          <a href="/products/detail" class="myButton">Ver Mas</a>
                       </div>
       
                   </div>
@@ -72,11 +69,10 @@
                   <img src="/img/tazainodoro.jpg" width="100%" alt="">
                   <div class="detail-product">
                       
-                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
-                      <h4>Taza Inodoro</h4>
+<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Inodoro</h4>
                       <div class="contenedor-precio-descuento">
                           <p class="precio">$1.500</p>
-                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                          <a href="/products/detail" class="myButton">Ver Mas</a>
                       </div>
                 
                   </div>
@@ -85,14 +81,13 @@
               <article>
                   <img src="/img/tazacubo.jpg" width="100%" alt="">
                   <div class="detail-product">
-                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
-                      <h4>Taza Cubo</h4>
+<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Cubo</h4>
                       
                       
                       <div class="contenedor-precio-descuento">
   
                           <p class="precio">$2.200</p>
-                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                          <a href="/products/detail" class="myButton">Ver Mas</a>
                       </div>
                       
                   </div>
@@ -103,13 +98,12 @@
               <article>
                   <img src="/img/tazadona.jpg" width="100%" alt="">
                   <div class="detail-product">
-                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
-                      <h4>Taza Dona</h4>
+<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Dona</h4>
                       
                      
                       <div class="contenedor-precio-descuento">
                           <p class="precio">$1.770</p>
-                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                          <a href="/products/detail" class="myButton">Ver Mas</a>
                       </div>
                     
                   </div>
@@ -118,13 +112,12 @@
               <article>
                   <img src="/img/tazallama.jpg" width="100%" alt="">
                   <div class="detail-product">
-                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
-                      <h4>Taza Llama</h4>
+<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Llama</h4>
                       
                       
                       <div class="contenedor-precio-descuento">
                           <p class="precio">$2.000</p>
-                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                          <a href="/products/detail" class="myButton">Ver Mas</a>
                       </div>
                     
                   </div>
@@ -133,13 +126,12 @@
               <article>
                   <img src="/img/tazainodoro.jpg" width="100%" alt="">
                   <div class="detail-product">
-                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
-                      <h4>Taza Inodoro</h4>
+<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Inodoro</h4>
                       
                       
                       <div class="contenedor-precio-descuento">
                           <p class="precio">$1.500</p>
-                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                          <a href="/products/detail" class="myButton">Ver Mas</a>
                       </div>
                      
                   </div>
@@ -148,14 +140,14 @@
               <article>
                   <img src="/img/tazacubo.jpg" width="100%" alt="">
                   <div class="detail-product">
-                      <a href="/products/cart"> <i class="fas fa-shopping-cart"></i></a>
+                    <a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
                       <h4>Taza Cubo</h4>
                       
                      
                       <div class="contenedor-precio-descuento">
                           <p class="precio">$2.200</p>
                    
-                          <a href="/productDetail" class="myButton">Ver Mas</a>
+                          <a href="/products/detail" class="myButton">Ver Mas</a>
                       </div>
                     
                   </div>
