--- a/sitio/views/productDetail.ejs
+++ b/sitio/views/productDetail.ejs
@@ -46,7 +46,7 @@
                 <span>1</span>
                 <button>   +     </button>
               </div>
-              <a href="/products/cart" class="myButton">Añadir al carrito</a>
+              <a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
                
             </div>
           </div>
