--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -8,7 +8,7 @@
         <nav>
             <ul class="navbar">
                 <li><a href="/">Inicio</a></li>
-                <li><a href="">Productos</a></li>
+                <li><a href="/products">Productos</a></li>
                 <li><a href="">Preguntas frecuentes</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
