--- a/sitio/views/products.ejs
+++ b/sitio/views/products.ejs
@@ -20,7 +20,7 @@
                         <span class="descuento"> 10% OFF</span>
                         <p class="precio">$1.770 </p>
                     </div>
-                <a href="/products/detail" class="myButton">Ver Mas</a>
+                <a href="/products/detail/:id" class="myButton">Ver Mas</a>
                 </div>
             </article>
         </section>
