--- a/sitio/public/stylesheets/productDetail.css
+++ b/sitio/public/stylesheets/productDetail.css
@@ -33,6 +33,15 @@
   
   .product-description span {
     font-size: 12px;
+    font-weight: bold;
+    color: #2d00f3;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  .product-description span.precio {
+    font-size: 14px;
+    font-weight: bold;
     color: #2d00f3;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -44,12 +53,20 @@
     color: #43484D;
     letter-spacing: -2px;
   }
-
+  .product-description b {
+    font-size: 14px;
+    font-weight: bold;
+    color: #27b81a;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
   .product-description p {
     font-size: 16px;
     font-weight: 300;
     color: #86939E;
     line-height: 24px;
+    padding: 5px 0;
   }
  
 
@@ -65,12 +82,6 @@
     color: #5E6977;
     background-color: #fff;
   }
-
-
-
-
-
- 
 
   
 /*------------tablet-----------------*/
@@ -90,24 +101,7 @@
     margin-top: 60px;
   }
  
-
-   
-  
-
-   
-
-
-
-
-
-
-
-
-
-
 }
-
-
 
 
 @media (min-width: 1024px) {
@@ -140,10 +134,5 @@
     width: 60%;
      
   }
-   
-  
-
-   
-
-     
+    
 }
