--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -7,6 +7,21 @@
   background-color: #ffffff;
 }
 
+
+.product-card {
+  width: auto;
+  height: 600px;
+  border-radius: 8px; 
+  box-shadow:  0 2px 2px rgba(0,0,0,0.35);
+  overflow: hidden;
+  margin: 20px;
+ 
+}
+
+.product-card img {
+  width: 100%;
+  height: 50%;
+}
  
 .contenedor-precio-descuento {
   padding: 15px;
@@ -17,14 +32,7 @@
 .precio {
   width: 30%;
 }
-.contenedor-precio-descuento span {
-  font-size: 12px;
-  font-weight: 300;
-  color: green;
-  margin: 0 0 0 10px;
-  order: 0;
-  width: 40%;
-}
+
 
 .contenedor-precio-descuento p {
   font-size: 14px;
@@ -34,18 +42,44 @@
   height: 0;
   order: 1;
   width: 40%;
+
 }
+
+
 
 .home p {
   font-size: 12px;
 }
  
+.home .descuento   {
+  font-size: 12px;
+  font-weight: 300;
+  color: green;
+  margin: 0 0 0 10px;
+  order: 0;
+  width: 40%;
+
+}
+
+
 .home main .detail-product h4 {
   font-size: 18px;
 }
 
+.home main .detail-product h5 {
+  font-size: 12px;
+ 
+ padding:  10px 20px 5px 0px;
+  opacity: .5;
+  width: 100%;
+  height: 80px;
+}
+
 .home .precio {
   font-size: 18px;
+ border-radius: 10px;
+
+ background-color: sienna;
 }
 
 
@@ -93,7 +127,7 @@
 .myButton:hover {
   border-color: rgb(200, 50, 50);
 }
-  
+
 
 
 .botones button{
@@ -122,9 +156,14 @@ margin: 25px 30px 10px   auto;
 }
 
 
-/*desptok*/
-@media (min-width: 769px) {
+/*tablet*/
+@media (min-width: 768px) {
    
+  .home main article .detail-product {
+    border-top: 1px solid #ebebeb;
+    
+  }
+
   .home main .detail-product h4,
   .home nav ul {
     display: block;
@@ -145,9 +184,14 @@ margin: 25px 30px 10px   auto;
   }
  
   .home main article {
-    width: 22%;
+    width: 32%;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .home main .contenedor-precio-descuento {
+    padding: 40px 30px 40px 4px;
+    margin: 2%;
   }
   
   .botones button {
@@ -161,11 +205,29 @@ margin: 25px 30px 10px   auto;
   color: white;
 margin-left: 38%;
   }
+
+
+ 
+  .myButton{
+    margin: 0px;
+    padding: 2px;
+    margin-bottom: 10px;
+  }
  
 }
 
-@media screen and (max-width: 800px) {
-	
+
+
+
+
+@media screen and (min-width:  1024px) {
+
+  
+  .home main article {
+    width: 24%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 	.contenido-principal {
 		flex-direction: column;
@@ -174,4 +236,7 @@ margin-left: 38%;
 	.contenido-principal > * {
 		width: 100%;
 	}
+
+  
+
 }
