--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -32,25 +32,49 @@
       <main>
    
           <section>
-  
+
+
+  <% products.forEach(product =>{  %> 
               
-              <article class="tazadona">
-                  <img src="/img/tazadona.jpg" width="100%" alt="">
+              <article class="product-card">
+          
+                  <img src="/img/products/<%= product.image %>" width="100%" alt="">
                   <div class="detail-product">
                    
-<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Dona </h4>
-                      <div class="contenedor-precio-descuento">
+<a href="/products/cart" class="myButton">
+    
+    <i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                     
+
+<h4><%= product.name %> </h4>
+
+
+ 
+<h5><%= product.description %> </h5>
+                     
+
+                          <div class="contenedor-precio-descuento">
                     
-                          <p class="precio">$1.770 </p>
-                  
-                          <a href="/products/detail" class="myButton">Ver Mas</a>
+                          <p class="precio"> $ <%= product.price %></p>
+                       
+                          <p class="descuento">    <i class="fas fa-user-tag"></i>
+                            % <%= product.discount%></p>
+
                       
                       </div>
-              
-                  </div>
+                          
+
+
+                      <a href="/products/detail" class="myButton">Ver Mas</a>
+                    </div>
+               
               </article>
-  
-              <article class="tazallama">
+       
+     
+              <% }) %> 
+
+
+
+        <!--- <article class="tazallama">
                   <img src="/img/tazallama.jpg" width="100%" alt="">
   
   
@@ -152,7 +176,7 @@
                     
                   </div>
               </article>
-  
+  -->   
           </section>
   
           <div class="botones">
