--- a/sitio/public/stylesheets/productDetail.css
+++ b/sitio/public/stylesheets/productDetail.css
@@ -83,6 +83,27 @@
     background-color: #fff;
   }
 
+  .button-añadir{
+      display:inline-block;
+      background-color:#ffb8a1;
+       padding:0.3em 1.2em;
+       margin-top: 15px;
+       border:0.16em solid rgba(255,255,255,0);
+       border-radius:2em;
+       box-sizing: border-box;
+       text-decoration:none;
+       font-family:'Roboto',sans-serif;
+       font-weight:300;
+       color:#000000;
+       text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+       text-align:center;
+       transition: all 0.2s;
+       width: 60%;
+ }
+ .button-añadir:hover {
+    border-color: rgb(200, 50, 50);
+  }
+  
   
 /*------------tablet-----------------*/
 @media (min-width: 768px) {
