--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -10,7 +10,7 @@
 
 .product-card {
   width: auto;
-  height: 600px;
+  height: 450px;
   border-radius: 8px; 
   box-shadow:  0 2px 2px rgba(0,0,0,0.35);
   overflow: hidden;
@@ -28,6 +28,8 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 35px;
+  justify-content: space-between;
 }
 .precio {
   width: 30%;
@@ -48,17 +50,16 @@
 
 
 .home p {
-  font-size: 12px;
+  font-size: 14px;
 }
  
-.home .descuento   {
-  font-size: 12px;
-  font-weight: 300;
-  color: green;
-  margin: 0 0 0 10px;
-  order: 0;
-  width: 40%;
-
+ p.precio b {
+  font-size: 14px;
+  font-weight: bold;
+  color: #27b81a;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
 
@@ -75,11 +76,13 @@
   height: 80px;
 }
 
-.home .precio {
-  font-size: 18px;
- border-radius: 10px;
-
- background-color: sienna;
+.home .precio span {
+  font-size: 14px;
+  font-weight: bold;
+  color: #2d00f3;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
 
@@ -143,7 +146,7 @@ margin-left: 30%;
 }
 .myButton {
   display:block;
-margin: 25px 30px 10px   auto;
+margin: 0px 30px 10px   auto;
  }
  
 *{
@@ -190,10 +193,11 @@ margin: 25px 30px 10px   auto;
   }
 
   .home main .contenedor-precio-descuento {
-    padding: 40px 30px 40px 4px;
+    padding: 20px 30px 40px 4px;
     margin: 2%;
   }
   
+
   .botones button {
     width: 20%;
   padding: 10px;
@@ -209,7 +213,7 @@ margin-left: 38%;
 
  
   .myButton{
-    margin: 0px;
+    margin-top: 14px;
     padding: 2px;
     margin-bottom: 10px;
   }
