--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -7,7 +7,10 @@
   background-color: #ffffff;
 }
 
-
+.home h1{
+  width: 100%;
+  font-size: 20px;
+}
 .product-card {
   width: auto;
   height: 450px;
