--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -1,191 +1,93 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <%- include("partials/head",{title: 'Hora del té'}) %>
+<%- include("partials/head",{title: 'Hora del té' }) %>
 
- <!---header-->
+    <!---header-->
 
- <%- include("partials/header") %>
+    <%- include("partials/header") %>
 
- <!---header-->
+        <!---header-->
 
-<!--carrousel-->
-<div class="glider-contain">
-    <div class="glider">
-        <button aria-label="Previous" class="glider-prev">«</button>
-        <div><img src="/img/img-home-banner.jpg" alt=""></div>
-        <div><img src="/img/2.jpg" alt=""></div>
-      <div><img src="/img/1.jpg" alt=""></div>
-      <div><img src="/img/3.jpg" alt=""></div>
-      <div><img src="/img/4.jpg" alt=""></div>
-      <div><img src="/img/5.jpg" alt=""></div>
-        <button aria-label="Next" class="glider-next">»</button>
-        <div role="tablist" class="dots"></div>
-    </div>
+        <!--carrousel-->
+        <div class="glider-contain">
+            <div class="glider">
+                <button aria-label="Previous" class="glider-prev">«</button>
+                <div><img src="/img/img-home-banner.jpg" alt=""></div>
+                <div><img src="/img/2.jpg" alt=""></div>
+                <div><img src="/img/1.jpg" alt=""></div>
+                <div><img src="/img/3.jpg" alt=""></div>
+                <div><img src="/img/4.jpg" alt=""></div>
+                <div><img src="/img/5.jpg" alt=""></div>
+                <button aria-label="Next" class="glider-next">»</button>
+                <div role="tablist" class="dots"></div>
+            </div>
 
-  <script src="javascripts/glider.js"> </script>
-  <script src="javascripts/home.js"></script>
-  
-      <!--fin carrousel-->
-          
-      <body class="home"> 
-      <main>
-   
-          <section>
+            <script src="javascripts/glider.js"> </script>
+            <script src="javascripts/home.js"></script>
 
+            <!--fin carrousel-->
 
-  <% products.forEach(product =>{  %> 
-              
-              <article class="product-card">
-          
-                  <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                  <div class="detail-product">
-                   
-<a href="/products/cart" class="myButton">
-    
-    <i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                     
+            <body class="home">
+                <main>
 
-<h4><%= product.name %> </h4>
+                    <section>
 
 
- 
-<h5><%= product.description %> </h5>
-                     
+                        <% products.forEach(product=>{ %>
 
-                          <div class="contenedor-precio-descuento">
-                    
-                          <p class="precio"> $ <%= product.price %></p>
-                       
-                          <p class="descuento">    <i class="fas fa-user-tag"></i>
-                            % <%= product.discount%></p>
+                            <article class="product-card">
 
-                      
-                      </div>
-                          
+                                <img src="/img/products/<%= product.image %>" width="100%" alt="">
+                                <div class="detail-product">
+
+                                    <a href="/products/cart" class="myButton">
+
+                                        <i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
+
+                                    <h4>
+                                        <%= product.name %>
+                                    </h4>
 
 
-                      <a href="/products/detail" class="myButton">Ver Mas</a>
+
+                                    <h5>
+                                        <%= product.description %>
+                                    </h5>
+
+
+                                    <div class="contenedor-precio-descuento">
+
+
+
+                                        <p class="precio"> $ <%= product.price %>
+                                        </p>
+
+                                        <p class="descuento"> <i class="fas fa-user-tag"></i>
+                                            % <%= product.discount%>
+                                        </p>
+
+                                    </div>
+
+
+
+                                    <a href="/products/detail" class="myButton">Ver Mas</a>
+                                </div>
+
+                            </article>
+
+
+                            <% }) %>
+                    </section>
+
+                    <div class="botones">
+                        <button type="reset" id="reset"><a href="/products">Ver Más Productos</a></button>
+
                     </div>
-               
-              </article>
-       
-     
-              <% }) %> 
+                </main>
 
+                <%- include('partials/footer') %>
 
+            </body>
 
-        <!--- <article class="tazallama">
-                  <img src="/img/tazallama.jpg" width="100%" alt="">
-  
-  
-                  <div class="detail-product">
-                  
-    <a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Llama</h4>
-                      <div class="contenedor-precio-descuento">
-                          <p class="precio">$2.000</p>
-                          <a href="/products/detail" class="myButton">Ver Mas</a>
-                      </div>
-      
-                  </div>
-              </article>
-  
-              <article>
-                  <img src="/img/tazainodoro.jpg" width="100%" alt="">
-                  <div class="detail-product">
-                      
-<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Inodoro</h4>
-                      <div class="contenedor-precio-descuento">
-                          <p class="precio">$1.500</p>
-                          <a href="/products/detail" class="myButton">Ver Mas</a>
-                      </div>
-                
-                  </div>
-              </article>
-  
-              <article>
-                  <img src="/img/tazacubo.jpg" width="100%" alt="">
-                  <div class="detail-product">
-<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Cubo</h4>
-                      
-                      
-                      <div class="contenedor-precio-descuento">
-  
-                          <p class="precio">$2.200</p>
-                          <a href="/products/detail" class="myButton">Ver Mas</a>
-                      </div>
-                      
-                  </div>
-              </article>
-          </section>
-       
-          <section>
-              <article>
-                  <img src="/img/tazadona.jpg" width="100%" alt="">
-                  <div class="detail-product">
-<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Dona</h4>
-                      
-                     
-                      <div class="contenedor-precio-descuento">
-                          <p class="precio">$1.770</p>
-                          <a href="/products/detail" class="myButton">Ver Mas</a>
-                      </div>
-                    
-                  </div>
-              </article>
-  
-              <article>
-                  <img src="/img/tazallama.jpg" width="100%" alt="">
-                  <div class="detail-product">
-<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Llama</h4>
-                      
-                      
-                      <div class="contenedor-precio-descuento">
-                          <p class="precio">$2.000</p>
-                          <a href="/products/detail" class="myButton">Ver Mas</a>
-                      </div>
-                    
-                  </div>
-              </article>
-  
-              <article>
-                  <img src="/img/tazainodoro.jpg" width="100%" alt="">
-                  <div class="detail-product">
-<a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>                      <h4>Taza Inodoro</h4>
-                      
-                      
-                      <div class="contenedor-precio-descuento">
-                          <p class="precio">$1.500</p>
-                          <a href="/products/detail" class="myButton">Ver Mas</a>
-                      </div>
-                     
-                  </div>
-              </article>
-  
-              <article>
-                  <img src="/img/tazacubo.jpg" width="100%" alt="">
-                  <div class="detail-product">
-                    <a href="/products/cart" class="myButton"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-                      <h4>Taza Cubo</h4>
-                      
-                     
-                      <div class="contenedor-precio-descuento">
-                          <p class="precio">$2.200</p>
-                   
-                          <a href="/products/detail" class="myButton">Ver Mas</a>
-                      </div>
-                    
-                  </div>
-              </article>
-  -->   
-          </section>
-  
-          <div class="botones">
-              <button type="reset" id="reset">Ver Más Productos</button>
-   
-          </div>
-      </main>
-  
-      <%- include('partials/footer') %>
-  
-  </body>
-  </html>
+</html>
