--- a/sitio/views/productModify.ejs
+++ b/sitio/views/productModify.ejs
@@ -19,16 +19,16 @@
         </div>
   
         <div class="card-body">
-          <form class="row">
+          <form action="/products/edit/<%= product.id %>?_method=PUT" method="POST" class="row">
             <div class="mb-3">
               <label for="name" class="form-label">Nombre</label>
-              <input name="name" type="text" class="form-control" placeholder="Nombre de Producto" id="name" >
+              <input name="name" type="text" class="form-control" placeholder="Nombre de Producto" id="name" value="<%= product.name %>">
             </div>
             
             <div class="mb-3">
               <div class="form-floating">
                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" name="description"></textarea>
-                <label for="description">Descripción</label>
+                <label for="description"><%= product.description %></label>
               </div>
             </div>
   
@@ -36,9 +36,10 @@
               <div class="form-floating">
                 <select class="form-select" id="category" aria-label="Floating label select example" name="category" >
                   <option selected>Seleccionar una Categoría</option>
-                  <option value="1">Tazas</option>
-                  <option value="2">Teteras</option>
-                  <option value="3">Otros</option>
+
+                  <% categories.forEach(category => { %>
+                   <option value=<%= category.id %> <%= category.id === product.category ? 'selected' : null %>> <%= category.name %> </option>
+                  <% }) %>
                 </select>
                 <label for="category">Categoría</label>
               </div>
@@ -51,14 +52,14 @@
   
             <div class="mb-3">
               <label for="price" class="form-label">Precio</label>
-              <input type="number" class="form-control" placeholder="Precio" id="price" name="price" aria-describedby="price">
+              <input type="number" class="form-control" placeholder="Precio" id="price" name="price" aria-describedby="price" value=<%= toThousand( product.price) %> >
             </div>
   
             <div class="mb-3">
               <label for="discount" class="form-label">Indicar Descuento</label>
               <input type="number" class="form-control" 
               placeholder="Descuento" 
-              id="discount" name="discount" aria-describedby="discount">
+              id="discount" name="discount" aria-describedby="discount" value= <%= product.discount %> >
             </div>
             
             <div class="col-12 col-md-6">
